--- a/SignalrCore.Chat.Server/SignalrCore.Chat.Server.csproj
+++ b/SignalrCore.Chat.Server/SignalrCore.Chat.Server.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Cors" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.0-preview1-final" />
   </ItemGroup>
 
 </Project>
